# freedom-kernel

./: .coverage  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  ENFORCEMENT.md  LICENSE  MASTER_PLAN.md  NON_GOALS.md  README.md  SECURITY.md  SEMANTICS.md  TCB.md  THEORY.md  THREAT_MODEL.md  azadi_ai_ethics.py  freedom_kernel_impl_spec.docx  intext.txt  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
.hypothesis/constants/: 01bdd310f774c030  03d731be51e931dd  05b4d546aae39486  0e93de531dc4c197  103de910e1f37728  3427f24db9b00214  3edbe9d8286a083c  4a8d593cfe9c6d23  4aefdad856580620  56c781fe8d4fe7ef  58697b7f02cc9f09  5a90e8a77379d3e8  723695e43bc14313  73ebb5131181effa  7c7941bd5d171c6a  8e463f39fac72f6d  b0d21edc2b5a1ea8  b904209e5b3dcdf2  ba72e41176e9a4f8  ba74f32cc89142d0  c8821967a4932c0a  da39a3ee5e6b4b0d  eca1eb19f7bb31db  f11fbd2a5fd43cd8  f8fcefc48cbf0266
book/: theory_of_freedom_ai_chapters_en.md  theory_of_freedom_full_en.md
book_source/: ai_intro_persian.txt  formal_system_persian.txt  full_book_persian.txt  toc_persian.txt
examples/: agi_agent_loop.py
examples/fastapi_agent/: README.md  main.py
formal/: COVERAGE.md  INCOMPLETENESS.md  TLCConfig.cfg  bench_results.md  bench_results.txt  freedom_kernel.tla  kani_sovereignty.txt  plan_semantics.md  tlc_results.md
formal/lean4/FreedomKernel/: Incompleteness.lean  MultiAgent.lean  TCB.lean  Temporal.lean  lakefile.lean
freedom-kernel/: Cargo.toml  deny.toml
freedom-kernel-cli/: Cargo.toml
freedom-kernel-cli/src/: main.rs
freedom-kernel-go/: go.mod
freedom-kernel-go/pkg/freedomkernel/: types.go  verify.go
freedom-kernel/.cargo/: config.toml
freedom-kernel/benches/: verify_throughput.rs
freedom-kernel/fuzz/: Cargo.toml
freedom-kernel/fuzz/fuzz_targets/: fuzz_action_ir.rs  fuzz_c_abi.rs  fuzz_scope_contains.rs  fuzz_wire_deserialize.rs
freedom-kernel/include/: freedom_kernel.h
freedom-kernel/src/: capability.rs  crypto.rs  engine.rs  entities.rs  ffi.rs  goal_tree.rs  kani_proofs.rs  lib.rs  multi_agent.rs  planner.rs  registry.rs  verifier.rs  wire.rs
spec/v0.2/: SPEC.md
src/freedom_theory/: __init__.py
src/freedom_theory/api/: app.py
src/freedom_theory/compass/: mahdavi.py
src/freedom_theory/core/: entities.py  registry.py  verifier.py
src/freedom_theory/detection/: dialectical.py
src/freedom_theory/enforcement/: __init__.py  hooks.py  seccomp.py  wasm_sandbox.py
src/freedom_theory/extensions/: __init__.py  compass.py  detection.py  emergency.py  ifc.py
src/freedom_theory/kernel/: __init__.py  audit.py  capability.py  context.py  entities.py  goals.py  registry.py  verifier.py
tests/: test_a2_violation.py  test_adversarial.py  test_api.py  test_audit.py  test_bench_documented.py  test_compass.py  test_compass_5d.py  test_consent_chain.py  test_context.py  test_core.py  test_delegate.py  test_dialectical.py  test_emergency.py  test_enforcement.py  test_enforcement_l2_l3.py  test_fastapi_smoke.py  test_freeze.py  test_ifc.py  test_plan_goals.py  test_proptest.py  test_resource_types.py  test_revocation.py  test_scope.py  test_tlc_documented.py
tests/corpus/: blocked_forbidden_all_flags.json  blocked_machine_governs_human.json  blocked_no_write_claim.json  blocked_ownerless_machine.json  permitted_basic.json
(+2 files in other folders)
