[package]
name = "fk"
version = "0.1.0"
edition = "2021"
description = "Freedom Kernel CLI — verify actions and plans from the command line"

[[bin]]
name = "fk"
path = "src/main.rs"

[dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto       = true
strip     = "symbols"
