[package]
name = "freedom-kernel"
version = "0.1.0"
edition = "2021"
description = "Formal, auditable, cryptographically-verifiable AGI permission kernel"

[lib]
name = "freedom_kernel"
crate-type = ["cdylib"]

[dependencies]
pyo3       = { version = "0.22", features = ["extension-module"] }
serde      = { version = "1",    features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core  = { version = "0.6",  features = ["getrandom"] }
hex        = "0.4"
