[package]
name = "freedom-kernel-fuzz"
version = "0.0.1"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"

[dependencies.freedom-kernel]
path = ".."

[[bin]]
name = "fuzz_action_ir"
path = "fuzz_targets/fuzz_action_ir.rs"
test = false
doc = false

[[bin]]
name = "fuzz_wire_deserialize"
path = "fuzz_targets/fuzz_wire_deserialize.rs"
test = false
doc = false

[[bin]]
name = "fuzz_scope_contains"
path = "fuzz_targets/fuzz_scope_contains.rs"
test = false
doc = false

[[bin]]
name = "fuzz_c_abi"
path = "fuzz_targets/fuzz_c_abi.rs"
test = false
doc = false
